[package]
name = "ktx2-tools"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ktx2-compress"
path = "src/ktx2-compress.rs"

[[bin]]
name = "ktx2-info"
path = "src/ktx2-info.rs"

[[bin]]
name = "ktx2-to-dds"
path = "src/ktx2-to-dds.rs"

[[bin]]
name = "ktx2-bc6h-compress"
path = "src/ktx2-bc6h-compress.rs"

[[bin]]
name = "ktx2-to-sphere-harmonics"
path = "src/ktx2-to-sphere-harmonics.rs"

[[bin]]
name = "compress-bc7"
path = "src/compress-bc7.rs"

[[bin]]
name = "dds-to-ktx2"
path = "src/dds-to-ktx2.rs"

[dependencies]
ddsfile = "0.5.2"
ktx2 = { git = "https://github.com/BVE-Reborn/ktx2" }
zstd = "0.11.2"
basis-universal = "0.2.0"
intel_tex_2 = "0.2.0"
structopt = "0.3.26"
cubemap-spherical-harmonics = { git = "https://github.com/DGriffin91/cubemap-spherical-harmonics", version = "0.1.0" }
image = "0.24.2"
half = "2.0.0"
rayon = "1.5.3"
astcenc-rs = { git = "https://github.com/expenses/astcenc-rs" }

[patch.'https://github.com/BVE-Reborn/ktx2']
ktx2 = { git = "https://github.com/expenses/ktx2", branch = "astc-sfloat-formats" }
