[package]
name = "ktx2-tools"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ktx2-compress"
path = "src/ktx2-compress.rs"

[[bin]]
name = "ktx2-info"
path = "src/ktx2-info.rs"

[[bin]]
name = "ktx2-to-dds"
path = "src/ktx2-to-dds.rs"

[[bin]]
name = "ktx2-bc6h-compress"
path = "src/ktx2-bc6h-compress.rs"

[[bin]]
name = "ktx2-to-sphere-harmonics"
path = "src/ktx2-to-sphere-harmonics.rs"

[[bin]]
name = "compress-bc7"
path = "src/compress-bc7.rs"

[[bin]]
name = "dds-to-ktx2"
path = "src/dds-to-ktx2.rs"

[dependencies]
ddsfile = "0.5.2"
ktx2 = { git = "https://github.com/BVE-Reborn/ktx2" }
zstd = "0.13.0"
basis-universal = "0.3.1"
intel_tex_2 = "0.2.2"
structopt = "0.3.26"
cubemap-spherical-harmonics = { git = "https://github.com/DGriffin91/cubemap-spherical-harmonics", version = "0.1.0" }
image = "0.24.7"
half = "2.3.1"
rayon = "1.8.0"
astcenc-rs = { git = "https://github.com/eira-fransham/astcenc-rs" }

[patch.'https://github.com/BVE-Reborn/ktx2']
ktx2 = { git = "https://github.com/expenses/ktx2", branch = "astc-sfloat-formats" }
