[package]
name = "ktx2-tools"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ktx2-compress"
path = "src/ktx2-compress.rs"

[[bin]]
name = "ktx2-info"
path = "src/ktx2-info.rs"

[[bin]]
name = "ktx2-to-dds"
path = "src/ktx2-to-dds.rs"

[[bin]]
name = "ktx2-bc6h-compress"
path = "src/ktx2-bc6h-compress.rs"

[[bin]]
name = "compress-bc7"
path = "src/compress-bc7.rs"

[[bin]]
name = "dds-to-ktx2"
path = "src/dds-to-ktx2.rs"

[dependencies]
ddsfile = "0.5.2"
ktx2 = "*"
zstd = "0.13.3"
basis-universal = "0.3.1"
intel_tex_2 = "0.2.2"
structopt = "0.3.26"
image = "0.24.9"
half = "2.6.0"
rayon = "1.10.0"
#astcenc-rs = "0.1.1"
